# RMV-Task3

./: CMakeLists.txt  README.md  main.cpp  out.txt
.cache/clangd/index/: main.cpp.255209A1C79B471B.idx
